<resources>
    <string name="app_name">Bibton</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="flexible_tranfering">Flexible Transferring \n\ Method</string>
    <string name="skip">Next</string>
    <string name="flexible">Flexible</string>
    <string name="transferring">Transferring</string>
    <string name="method">Method</string>
    <string name="goToProfitableExchangeFragment">goToProfitableExchangeFragment</string>
    <string name="profitable">Profitable</string>
    <string name="exchange">Exchange</string>
    <string name="rate">Rate</string>
    <string name="modern">Modern</string>
    <string name="user">User</string>
    <string name="inter">Interface</string>
    <string name="superr">Super</string>
    <string name="system">System</string>
    <string name="payment">Payment</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="_00_00_00">00-00-00</string>

    <string name="network_error_message">No internet connection</string>
    <string name="default_error_message">Sorry something went wrong. Please try again later.</string>
    <string name="network_error">No internet connection</string>
    <string name="server_error">Sorry something went wrong.\nPlease try again later.</string>
    <string name="searchCountry">Search country</string>
    <string name="enterSixDigitCode">Enter the 6-digit code \n We\'ve sent it to +374-00-00-00</string>
    <string name="createPassCode">Create a passcode for your \n Bibton account </string>
    <string name="forget">Forget?</string>
    <string name="warning">Warning</string>
    <string name="writeNewPassword">Please write a new passcode</string>
    <string name="ok">Ok</string>
    <string name="service">Services</string>
    <string name="pts">0 Pts</string>
    <string name="details">Details</string>
    <string name="wallet">Wallet</string>
    <string name="balance">Balance :</string>
    <string name="exChange">ExChange </string>
    <string name="topUp">Top Up</string>
    <string name="youDoNotHaveTransactions">You do not have any transactions yet!</string>
    <string name="cancel">Cancel</string>
    <string name="bankAccount">Bank Account</string>
    <string name="show">Show</string>
    <string name="active">Active</string>
    <string name="statement">Statement</string>
    <string name="rates">Rates</string>
    <string name="local">Local</string>
    <string name="swift">Swift</string>
    <string name="donotforget">Don`t forget to enter this reference:</string>
    <string name="beneficiary">Beneficiary</string>
    <string name="bibtonLTD">Bibton LTD</string>
    <string name="iban">IBAN</string>
    <string name="am47">AM47 ARDSHIN 3080 1214 0888 68</string>
    <string name="bic">BIC</string>
    <string name="ardshin">ARDSHINAM2L</string>
    <string name="beneficiaryAddress">Beneficiary address</string>
    <string name="ardshinBank">Ardshin Bank</string>
    <string name="bibtonLTDLevel">Bibton LTD, Level 00, Armenia, Yerevan, Arshakunyats 19</string>
    <string name="intermediary">Intermediary or sender`s bank may charge you for international payments</string>
    <string name="transferusually">Transfers usually take 1 to 3 working days to appear on your Spays account.</string>
    <string name="onlySiwft">Only SWIFT transfers are accepted</string>
    <string name="home">Home</string>
    <string name="analytics">Analytics</string>
    <string name="transfers">Transfers</string>
    <string name="cards">Cards</string>
    <string name="more">More</string>
    <string name="gbpmain">GBP: Main</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string-array name="menu_names_array">
        <item>Summery</item>
        <item>Payments</item>
        <item>Exchange</item>
        <item>Rates</item>
        <item>Settings</item>
        <item>Help</item>
    </string-array>
    <string-array name="service_names">
        <item>NFC</item>
        <item>QR</item>
        <item>Utility</item>
        <item>Rates</item>
        <item>My Bibton</item>
    </string-array>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <!--<integer-array name="menu_icons">-->
    <!--<item>@drawable/summary_icons</item>-->
    <!--<item>@drawable/payments_icon</item>-->
    <!--<item>@drawable/exchange_icon</item>-->
    <!--<item>@drawable/statement_icon</item>-->
    <!--<item>@drawable/settings_icon</item>-->
    <!--<item>@drawable/help_icon</item>-->
    <!--</integer-array>-->

</resources>
