<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@drawable/background"
    android:layout_height="match_parent">
    <ImageView
        android:layout_width="187dp"
        android:layout_height="51dp"
        android:background="@drawable/bibton_symbvols"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.07" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottie_animation_profitable"
        android:layout_width="226dp"
        android:layout_height="238dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4"
        android:layout_marginBottom="50dp"
        app:lottie_fileName="exchange_coins.json" />
    <ImageView
        android:layout_width="300dp"
        android:layout_height="1dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/group_lines"
        app:layout_constraintVertical_bias="0.66"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        />


    <TextView
        android:id="@+id/text_flexible"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:fontFamily="@font/noto_sans_regular"
        android:text="@string/profitable"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/transferring_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/text_transferring"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.75"
        android:layout_marginStart="50dp"
        />

    <TextView
        android:id="@+id/text_transferring"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:fontFamily="@font/noto_sans_bold"
        android:text="@string/exchange"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/transferring_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/text_flexible"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.75"
        android:layout_marginEnd="50dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/noto_sans_regular"
        android:text="@string/rate"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/transferring_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8"


        />
    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraint_next_profitable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.95"
        app:layout_constraintStart_toStartOf="parent">
        <ImageButton
            android:id="@+id/skip_button"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:onClick="nextToModerUserFragment"

            android:background="@drawable/button_skip"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/noto_sans_regular"
            android:text="@string/skip"
            android:textColor="@color/colorWhite"
            android:textSize="22dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.52" />
    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>